--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,9 +6,9 @@ build:
     coverage:
       tests:
         override:
-          - command: vendor/bin/phpunit --coverage-clover coverage.xml
+          - command: composer phpunit-xml
             coverage:
-              file: coverage.xml
+              file: phpunit.coverage.xml
               format: clover
     analysis:
       tests:
