--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require-dev": {
+        "php": "^7.4",
         "ext-json": "*",
         "phpunit/phpunit": "^9.4",
         "squizlabs/php_codesniffer": "^3.5"
