--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
             "email": "fermius.us@gmail.com"
         }
     ],
-    "require-dev": {
+    "require": {
         "php": "^7.4",
-        "ext-json": "*",
+        "ext-json": "*"
+    },
+    "require-dev": {
         "phpunit/phpunit": "^9.4",
         "squizlabs/php_codesniffer": "^3.5"
     },
