--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "fakerphp/faker": "^1.19"
     },
     "scripts": {
         "tests": "phpunit --stop-on-error --stop-on-failure --colors=always",
