--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           php-version: '7.4'
           coverage: none
+          ini-values: error_reporting=E_ALL, display_errors=On
 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -33,6 +34,7 @@ jobs:
         with:
           php-version: '8.0'
           coverage: none
+          ini-values: error_reporting=E_ALL, display_errors=On
 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -52,6 +54,7 @@ jobs:
         with:
           php-version: '8.1'
           coverage: none
+          ini-values: error_reporting=E_ALL, display_errors=On
 
       - name: Checkout code
         uses: actions/checkout@v2
